--- a/src/components/common/client/Header/header.module.scss
+++ b/src/components/common/client/Header/header.module.scss
@@ -1,8 +1,8 @@
 @use "@/mixins";
 
 .header {
-    --header-bg: 0deg, 0%, 6%;
-    --header-blur: 8px;
+    --header-bg: 0deg, 0%, 8%;
+    --header-blur: 5px;
     z-index: 100;
     position: fixed;
     top: var(--header-gap);
